<resources>
    <string name="app_name">Inventory App</string>
    <string name="inventory">Inventory:</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">0.00 $</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="_0_pcs">0 pcs</string>
    <string name="description_hint">Click to add description...</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="hint_phone_number">111-222-333</string>
    <string name="phone_number">Phone number:</string>
    <string name="suplier_name">Supplier name</string>
    <string name="name">Name:</string>
    <string name="suplier_info">Supplier info:</string>
    <string name="toast_message_product_already_in_table_quantity_updated">was in the table already, its quantity is updated by</string>
    <string name="toast_message_product_already_in_table">was already added to the table.</string>
    <string name="toast_message_problem_with_adding_to_table">Problem with adding product</string>
    <string name="toast_message_product_saved">Product saved to the table</string>
    <string name="toast_message_problem_fetching_image">Problem fetching image</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="discard_confirmation_dialog_question">Do you want to discard changes?</string>
    <string name="toast_message_details_updated">Product details updated</string>
    <string name="toast_message_no_info_updated">No info was updated</string>
    <string name="yes">Yes</string>
    <string name="add_product_without_something_dialog_question">Do you want to add product without</string>
    <string name="and">and</string>
    <string name="product_price_lower_case">product price</string>
    <string name="product_name_lower_case">product name</string>
    <string name="toast_message_all_items_deleted">All products deleted from the list</string>
    <string name="toast_message_cant_sell_more_nothings_left">Nothing left, can\'t sell more</string>
    <string name="toast_message_invalid_supplier_number">Invalid supplier phone number</string>
    <string name="toast_message_no_supplier_number">No supplier phone number</string>
    <string name="delete_product_dialog_message">Do you really want to delete this product?</string>
    <string name="toast_message_no_camera_hardware_or_software">No camera and/or camera app available</string>
    <string name="product_details_title">Product details</string>
    <string name="no_product_name_info">No product name...</string>
    <string name="no_supplier_number_info">No number...</string>
    <string name="no_supplier_name_info">No name...</string>
    <string name="no_description_info">No description...</string>
    <string name="product_name_missing_value">product quantity</string>
    <string name="product_must_contain">Product must contain</string>
    <string name="supplier_phone_number_lower_case">supplier phone number</string>
    <string name="supplier_name_lower_case">supplier name</string>
</resources>
