<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.orpuwupetup.inventoryapp.AddProduct">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/product_name"
        android:inputType="textCapWords"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textColor="#cdcdcd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/quantity"
        android:textColor="#cdcdcd"
        app:layout_constraintBottom_toTopOf="@id/product_quantity"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/_0_pcs"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toStartOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/image_width_and_height"
        android:layout_height="@dimen/image_width_and_height"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name" />

    <View
        android:id="@+id/image_covering_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#a0000000"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageButton
        android:id="@+id/choose_image_from_gallery"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:background="@drawable/image_from_gallery_button_background"
        android:src="@drawable/ic_folder_open"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageButton
        android:id="@+id/choose_image_from_camera"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:background="@drawable/image_from_camera_button_background"
        android:src="@drawable/ic_camera"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageButton
        android:id="@+id/choose_image_source"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/image_src_button_background"
        android:scaleType="center"
        android:src="@drawable/ic_perm_media_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <ImageButton
        android:id="@+id/close_image_options"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/image_src_button_background"
        android:src="@drawable/ic_close_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintStart_toStartOf="@id/product_image" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_circle_image"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintTop_toTopOf="@id/product_image" />

    <View
        android:id="@+id/suplier_info"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/suplier_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/suplier_info"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/suplier_info" />

    <TextView
        android:id="@+id/suplier_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/name"
        android:textColor="#cdcdcd"
        app:layout_constraintStart_toStartOf="@id/suplier_info_header"
        app:layout_constraintTop_toBottomOf="@id/suplier_info_header" />

    <EditText
        android:id="@+id/suplier_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/suplier_name"
        android:inputType="textCapWords"
        android:maxLength="32"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/suplier_name_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/suplier_name_header"
        app:layout_constraintTop_toTopOf="@id/suplier_name_header" />

    <TextView
        android:id="@+id/suplier_phone_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/phone_number"
        android:textColor="#cdcdcd"
        app:layout_constraintStart_toStartOf="@id/suplier_info_header"
        app:layout_constraintTop_toBottomOf="@id/suplier_name_header" />

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:maxLength="15"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/suplier_phone_number_header"
        app:layout_constraintEnd_toEndOf="@id/suplier_name_edit_text"
        app:layout_constraintStart_toStartOf="@id/suplier_name_edit_text"
        app:layout_constraintTop_toTopOf="@id/suplier_phone_number_header" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#eaeaea"
        android:gravity="center"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/suplier_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#5d6bbc"
        app:layout_constraintBottom_toTopOf="@id/description_edit_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#5d6bbc"
        app:layout_constraintBottom_toTopOf="@id/suplier_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/description_edit_text" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
