<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.orpuwupetup.inventoryapp.AddProduct">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product Name"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        />

    <View
        android:id="@+id/pseudo_guidline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="@id/product_image"
        app:layout_constraintBottom_toBottomOf="@id/product_image"/>
    <View
        android:id="@+id/top_blue_line"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        app:layout_constraintEnd_toStartOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/bottom_blue_line"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toTopOf="@id/pseudo_guidline"
        />

    <TextView
        android:id="@+id/text_view_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textColor="#cdcdcd"
        app:layout_constraintTop_toTopOf="@id/top_blue_line"
        app:layout_constraintBottom_toBottomOf="@id/top_blue_line"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/price" />
    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/top_blue_line"
        app:layout_constraintBottom_toTopOf="@id/bottom_blue_line"
        app:layout_constraintEnd_toStartOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/product_price"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#cdcdcd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bottom_blue_line"
        app:layout_constraintTop_toTopOf="@id/bottom_blue_line"
        />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="60dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/product_image"
        tools:text="@string/_0_pcs"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/product_image"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintStart_toStartOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="@id/product_image"
        android:src="@drawable/ic_circle_image_with_additions"/>

    <View
        android:id="@+id/suplier_info"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/suplier_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suplier_info"
        app:layout_constraintTop_toTopOf="@id/suplier_info"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="#ffffff"/>
    <ImageButton
        android:id="@+id/call_suplier_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/suplier_info_header"
        app:layout_constraintTop_toTopOf="@id/suplier_name_header"
        app:layout_constraintBottom_toBottomOf="@id/suplier_phone_number_header"
        android:src="@drawable/phonepeenge"
        android:background="#00000000"/>
    <TextView
        android:id="@+id/suplier_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/suplier_info_header"
        app:layout_constraintStart_toEndOf="@id/call_suplier_button"
        android:textColor="#cdcdcd"/>

    <TextView
        android:id="@+id/suplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/suplier_name"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintTop_toTopOf="@id/suplier_name_header"
        app:layout_constraintBottom_toBottomOf="@id/suplier_name_header"
        app:layout_constraintStart_toEndOf="@id/suplier_name_header"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/suplier_phone_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/suplier_name_header"
        app:layout_constraintStart_toEndOf="@id/call_suplier_button"
        android:textColor="#cdcdcd"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hint_phone_number"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/suplier_phone_number_header"
        app:layout_constraintBottom_toBottomOf="@id/suplier_phone_number_header"
        app:layout_constraintStart_toStartOf="@id/suplier_name"
        app:layout_constraintEnd_toEndOf="@id/suplier_name"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAlignment="center"
        tools:text="No description..."
        android:maxLines="5"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:background="#eaeaea"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/suplier_info"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#5d6bbc"
        app:layout_constraintBottom_toTopOf="@id/description"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#5d6bbc"
        app:layout_constraintBottom_toTopOf="@id/suplier_info"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/description"/>

    <!--TODO: change color of the floating button and add icon to it-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        />

    <!-- TODO: Add icons to the buttons -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_product_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="105dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:src="@drawable/ic_edit_product"
        android:layout_marginRight="20dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_product_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:src="@drawable/ic_delete"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="35dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <ImageButton
        android:id="@+id/decrement_quantity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="center"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/ic_details_left_arrow"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="@id/product_quantity"
        app:layout_constraintBottom_toBottomOf="@id/product_quantity"
        app:layout_constraintEnd_toStartOf="@id/product_quantity"/>
    <ImageButton
        android:id="@+id/increment_quantity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:src="@drawable/ic_details_right_arrow"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="@id/product_quantity"
        app:layout_constraintBottom_toBottomOf="@id/product_quantity"
        app:layout_constraintStart_toEndOf="@id/product_quantity"/>


</android.support.constraint.ConstraintLayout>
